Fix width of charts on smaller screens

--- a/cashout/core/static/stylesheets/main.sass
+++ b/cashout/core/static/stylesheets/main.sass
@@ -72,7 +72,6 @@ form .text-btn
   right: 0
 
 .chart
-  width: 700px
   height: 525px
 
 .chart_label
